# weird-input

./: Cargo.toml  README.md  example-config.toml
src/: config.rs  main.rs
src/backends/: actions.rs  triggers.rs
src/backends/actions/: shell.rs
src/backends/triggers/hass_zha/: api.rs  mod.rs
