[package]
name = "weird-input"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
async-stream = "0.3.6"
dirs = "5.0.1"
futures            = "0.3.31"
rustls             = { version = "0.23.14", features = ["aws-lc-rs"] }
serde              = { version = "1.0.210", features = ["derive"] }
serde_json         = "1.0.132"
thiserror = "1.0.64"
tokio              = { version = "1.40.0", features = ["rt-multi-thread", "net", "macros", "process"] }
tokio-tungstenite  = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
toml               = "0.8.19"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"
tungstenite        = "0.24.0"
